--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192.png">
 <link rel="icon" type="image/png" sizes="512x512" href="icons/icon-512.png">
 <head>
+<!-- PWA manifest (Android/Chrome) -->
+<link rel="manifest" href="manifest.webmanifest">
+<meta name="theme-color" content="#f7a40a">
+
+<!-- Icona iOS (Safari/iPhone) -->
+<link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
+
+<!-- Migliora aspetto su iOS quando salvata a Home -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="SchedaCliente">
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Scheda Cliente</title>
